csv files removed

--- a/01_Data_Collection.ipynb
+++ b/01_Data_Collection.ipynb
@@ -63,35 +63,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9b64b2bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "keywords = [\n",
     "    \"Sri Lanka\",\"Colombo\",\"Ampara\",\"Anuradhapura\",\"Badulla\",\"Batticaloa\",\"Galle\",\"Gampaha\",\"Hambantota\",\"Jaffna\",\"Kalutara\",\"Kandy\",\"Kegalle\",\"Kilinochchi\",\n",
-    "    \"Kurunegala\",\"Mannar\",\"Matale\",\"Matara\",\"Monaragala\",\"Mullaitivu\",\"Nuwara Eliya\",\"Polonnaruwa\",\"Puttalam\",\"Ratnapura\",\"Trinco\",\"Vavuniya\",\"Phone\"\n",
-    "    \"Negombo\",\"Moratuwa\",\"Kotte\",\"Kalmunai\",\"Beruwala\",\"Chilaw\",\"Panadura\",\"Wattala\",\"Katunayake\",\"Haputale\",\"Hatton\",\"Bandarawela\",\"Bentota\",\"Laptop\"\n",
-    "    \"Hikkaduwa\",\"Weligama\",\"Tangalle\",\"Pedro\",\"Kalpitiya\",\"Pettah\",\"Island\",\"Dehiwala\",\"Lavinia\",\"Maharagama\",\"Kelaniya\",\"Cuisine\",\"Game\",\"Hero\",\"AI\"\n",
-    "    \"Ceylon\",\"Sigiriya\",\"Peak\",\"Horton Plains\",\"Ella\",\"Dambulla\",\"Mirissa\",\"Arugam Bay\",\"Poya\",\"Kataragama\",\"Temple\",\"Kovil\",\"Dress\",\"Food\",\"Tournament\",\n",
-    "    \"Yala\",\"Wilpattu\",\"Udawalawe\",\"Knuckles\",\"Sinharaja\",\"Nine Arches Bridge\",\"Fort\",\"Ravana\",\"Pidurangala\",\"Lotus Tower\",\"Independence\",\"Home\",\"Tool\"\n",
-    "    \"Victoria\",\"Gregory\",\"Beira\",\"Beach\",\"Unawatuna\",\"Nilaveli\",\"Pasikuda\",\"Church\",\"Mosque\",\"Sinhala\",\"Tamil\",\"Islam\",\"Catholic\",\"Rupee\",\"LKR\",\"Port\",\n",
-    "    \"Airlines\",\"Tea\",\"Coconut\",\"Rice\",\"Spices\",\"Ayurveda\",\"Parliament\",\"President\",\"Prime Minister\",\"SLPP\",\"UNP\",\"SJB\",\"JVP\",\"NPP\",\"EPDP\",\"TNA\",\"Bank\",\n",
-    "    \"CSE\",\"Colombo Stock Exchange\",\"Police\",\"Army\",\"Navy\",\"Air\",\"Force\",\"Perahera\",\"Thai Pongal\",\"Deepavali\",\"Ramadan\",\"Eid\",\"Christmas\",\"Bodhi\",\"Tree\",\n",
-    "    \"Dagoba\",\"Dewalaya\",\"Tourism\",\"Economy\",\"Exports\",\"Imports\",\"Garments\",\"Rubber\",\"Cinnamon\",\"Cardamom\",\"Pepper\",\"Cinnamon\",\"Sapphire\",\"Gem\",\"Mining\",\n",
-    "    \"Agriculture\",\"Estates\",\"Plantations\",\"Estates\",\"Station\",\"Expressway\",\"Hospital\",\"Railways\",\"CTB\",\"SLTB\",\"Electricity\",\"Water\",\"Healthcare\",\"Medicine\",\n",
-    "    \"Doctors\",\"Nurses\",\"Schools\",\"Power cuts\",\"Fuel\",\"Protests\",\"Strikes\",\"Cost\",\"Inflation\",\"Crisis\",\"Corruption\",\"Rights\",\"Education\",\"University\",\"Rag\",\n",
-    "    \"Immigration\",\"Visa\",\"Hoppers\",\"Kottu\",\"Rice\",\"Lamprais\",\"Pol\",\"Sambol\",\"Kiribath\",\"Ambul thiyal\",\"Parippu\",\"Roti\",\"Watalappan\",\"Short\",\"Eats\",\"Sambol\",\n",
-    "    \"Achcharu\",\"Concert\",\"Road\",\"Site\",\"Accident\",\"Floods\",\"Barawa\",\"Dengue\",\"Elephant\",\"Leopard\",\"Bear\",\"Whale\",\"Dolphin\",\"Turtle\",\"Birds\",\"Monkey\",\n",
-    "    \"Athletics\",\"Rugby\",\"Volleyball\",\"Football\",\"Soccer\",\"Badminton\",\"Tennis\",\"Swimming\",\"Cycling\",\"Marathon\",\"Hockey\",\"Chess\",\"Cricket\",\"Government\",\n",
-    "    \"Movie\",\"Internet\",\"Software\",\"Startup\",\"Startup\",\"Innovation\",\"Research\",\"Development\",\"Science\",\"Technology\",\"App\",\"Website\",\"Platform\",\"Artificial\",\n",
+    "    \"Kurunegala\",\"Mannar\",\"Matale\",\"Matara\",\"Monaragala\",\"Mullaitivu\",\"Nuwara Eliya\",\"Polonnaruwa\",\"Puttalam\",\"Ratnapura\",\"Trinco\",\"Vavuniya\",\"Phone\",\"Public\",\n",
+    "    \"Negombo\",\"Moratuwa\",\"Kotte\",\"Kalmunai\",\"Beruwala\",\"Chilaw\",\"Panadura\",\"Wattala\",\"Katunayake\",\"Haputale\",\"Hatton\",\"Bandarawela\",\"Bentota\",\"Laptop\",\"Private\",\n",
+    "    \"Hikkaduwa\",\"Weligama\",\"Tangalle\",\"Pedro\",\"Kalpitiya\",\"Pettah\",\"Island\",\"Dehiwala\",\"Lavinia\",\"Maharagama\",\"Kelaniya\",\"Cuisine\",\"Game\",\"Hero\",\"AI\",\"Policy\",\n",
+    "    \"Ceylon\",\"Sigiriya\",\"Peak\",\"Horton Plains\",\"Ella\",\"Dambulla\",\"Mirissa\",\"Arugam Bay\",\"Poya\",\"Kataragama\",\"Temple\",\"Kovil\",\"Dress\",\"Food\",\"Tournament\",\"Progress\"\n",
+    "    \"Yala\",\"Wilpattu\",\"Udawalawe\",\"Knuckles\",\"Sinharaja\",\"Nine Arches Bridge\",\"Fort\",\"Ravana\",\"Pidurangala\",\"Lotus Tower\",\"Independence\",\"Home\",\"Tool\",\"Problem\",\n",
+    "    \"Victoria\",\"Gregory\",\"Beira\",\"Beach\",\"Unawatuna\",\"Nilaveli\",\"Pasikuda\",\"Church\",\"Mosque\",\"Sinhala\",\"Tamil\",\"Islam\",\"Catholic\",\"Rupee\",\"LKR\",\"Port\",\"Solution\",\n",
+    "    \"Airlines\",\"Tea\",\"Coconut\",\"Rice\",\"Spices\",\"Ayurveda\",\"Parliament\",\"President\",\"Prime Minister\",\"SLPP\",\"UNP\",\"SJB\",\"JVP\",\"NPP\",\"EPDP\",\"TNA\",\"Bank\",\"Support\",\n",
+    "    \"CSE\",\"Colombo Stock Exchange\",\"Police\",\"Army\",\"Navy\",\"Air\",\"Force\",\"Perahera\",\"Thai Pongal\",\"Deepavali\",\"Ramadan\",\"Eid\",\"Christmas\",\"Bodhi\",\"Tree\",\"Concern\",\n",
+    "    \"Dagoba\",\"Dewalaya\",\"Tourism\",\"Economy\",\"Export\",\"Import\",\"Garment\",\"Rubber\",\"Cinnamon\",\"Cardamom\",\"Pepper\",\"Cinnamon\",\"Sapphire\",\"Gem\",\"Mining\",\"Success\",\n",
+    "    \"Agri\",\"Culture\",\"Estates\",\"Plantation\",\"Estate\",\"Station\",\"Expressway\",\"Hospital\",\"Railways\",\"CTB\",\"SLTB\",\"Electricity\",\"Water\",\"Health\",\"Medicine\",\"Social\"\n",
+    "    \"Doctor\",\"Nurse\",\"School\",\"Power cuts\",\"Fuel\",\"Protest\",\"Strike\",\"Cost\",\"Inflation\",\"Crisis\",\"Corruption\",\"Rights\",\"Education\",\"Politics\",\"University\",\"Rag\",\n",
+    "    \"Immigration\",\"Visa\",\"Hoppers\",\"Kottu\",\"Rice\",\"Lamprais\",\"Pol\",\"Sambol\",\"Kiribath\",\"Ambul thiyal\",\"Parippu\",\"Roti\",\"Watalappan\",\"Short\",\"Eats\",\"Failure\",\"Student\",\n",
+    "    \"Achcharu\",\"Concert\",\"Road\",\"Site\",\"Accident\",\"Floods\",\"Barawa\",\"Dengue\",\"Elephant\",\"Leopard\",\"Bear\",\"Whale\",\"Dolphin\",\"Turtle\",\"Birds\",\"Monkey\",\"Challenge\",\n",
+    "    \"Athletics\",\"Rugby\",\"Volleyball\",\"Football\",\"Soccer\",\"Badminton\",\"Tennis\",\"Swimming\",\"Cycling\",\"Marathon\",\"Hockey\",\"Chess\",\"Cricket\",\"Government\",\"Improve\",\n",
+    "    \"Movie\",\"Internet\",\"Software\",\"Startup\",\"Startup\",\"Innovation\",\"Research\",\"Development\",\"Science\",\"Technology\",\"App\",\"Website\",\"Platform\",\"Artificial\",\"Budget\",\n",
     "    \"Service\",\"Product\",\"Launch\",\"Event\",\"Festival\",\"Conference\",\"Meetup\",\"Workshop\",\"Seminar\",\"Hackathon\",\"Competition\",\"Award\",\"Recognition\",\"Achievement\",\n",
-    "    \"ලෝකය\", \"ආරෝග්‍ය\", \"නිදහස\", \"ඇතුලත්\", \"මිතුරන්\", \"අසරණ\", \"සඳ\",\"තක්සේරු\", \"වෙනස්\", \"අවකාශ\", \"ආසනය\", \"ඔබ\", \"මතක\",\"මැතිවරණ\",\"ප්‍රතිඵල\",\"ශ්‍රී\",\"වාහන\",\"බදු\" \n",
-    "    \"සැරසිලි\", \"චරිත\", \"විශ්ව\", \"යුග\", \"සමාජය\", \"නව\", \"අභියෝග\", \"විවිධ\", \"රස\", \"සංස්කෘතිය\", \"ඇගයීම\", \"සමෘද්ධි\", \"නවක\", \"ජය\",\"අරමුණ\", \"සංගීතය\", \"අනුවාදය\",\"ප්‍රවෘත්ති\"\n",
+    "    \"ලෝකය\", \"ආරෝග්‍ය\", \"නිදහස\", \"ඇතුලත්\", \"මිතුරන්\", \"අසරණ\", \"සඳ\",\"තක්සේරු\", \"වෙනස්\", \"අවකාශ\", \"ආසනය\", \"ඔබ\", \"මතක\",\"මැතිවරණ\",\"ප්‍රතිඵල\",\"ශ්‍රී\",\"වාහන\",\"බදු\", \n",
+    "    \"සැරසිලි\", \"චරිත\", \"විශ්ව\", \"යුග\", \"සමාජය\", \"නව\", \"අභියෝග\", \"විවිධ\", \"රස\", \"සංස්කෘතිය\", \"ඇගයීම\", \"සමෘද්ධි\", \"නවක\", \"ජය\",\"අරමුණ\", \"සංගීතය\", \"අනුවාදය\",\"ප්‍රවෘත්ති\",\n",
     "    \"සහාය\", \"කෘතීය\", \"අත්දැකීම්\", \"කියවීම\", \"අරමුදල්\", \"කලා\",\"හොඳ\", \"බාල\", \"හිරු\", \"මනෝභාවය\", \"විපරිචාරික\", \"බැලීම\", \"අවිස්සාවේ\", \"විද්‍යාව\", \"ඉතා\", \"සටහන\",\"කාල\", \"කෝපි\", \n",
     "    \"අමන\", \"දැනුම\", \"ලක්ෂණ\", \"ඉලක්ක\", \"ස්ථානය\", \"විලාසිතාව\", \"කර්මය\", \"ජනප්‍රිය\",\"නවීන\", \"පූජා\", \"සවිය\", \"කතාව\", \"මිතුර\", \"වටපිටාව\", \"ජනයා\", \"ශක්තිය\", \"මුල්\", \"අලුත්\",\"සජීවී\", \n",
     "    \"අක්සේපට්\", \"අපූරු\", \"ඔපේරාව\", \"මුලු\", \"එක්සත්\", \"ආගම්\", \"ඉස්ලාමය\", \"ලෝකය\", \"අද\",\"දෙවන\", \"චිත්‍රපට\", \"අංශ\", \"මනෝභාව\", \"බර\", \"මානව\", \"දෛනික\", \"නිර්මාණ\", \"වෛද්‍ය\", \n",
-    "    \"ලක්‍ෂ්‍ය\", \"සියළු\", \"අංග\", \"ආරක්ෂක\", \"ජාතිය\", \"බොහෝ\", \"තොරතුරු\", \"හඳ\", \"හරිත\",\"ජාවාරම්කරු\",\"දිවයින\",\"සන්නාමය\",\"සම්මාන\",\"විශේෂාංග\",\"ක්‍රීඩා\",\"චෝදනා\",\"විමර්ශන\",\"ජනාධිපති\" \n",
+    "    \"ලක්‍ෂ්‍ය\", \"සියළු\", \"අංග\", \"ආරක්ෂක\", \"ජාතිය\", \"බොහෝ\", \"තොරතුරු\", \"හඳ\", \"හරිත\",\"ජාවාරම්කරු\",\"දිවයින\",\"සන්නාමය\",\"සම්මාන\",\"විශේෂාංග\",\"ක්‍රීඩා\",\"චෝදනා\",\"විමර්ශන\",\"ජනාධිපති\", \n",
     "    \"அருட்சக்தி\", \"இனிய\", \"நம்பிக்கை\", \"சக்தி\", \"பொது\", \"வாழ்க்கை\", \"உயிர்\", \"அறிவு\", \"நியாயம்\", \"அமைதி\",\n",
     "    \"தொழில்நுட்பம்\", \"இனியதை\", \"சினிமா\", \"அவரை\", \"புதுக்கால\", \"கலை\", \"விருது\", \"உதவி\", \"விரும்ப\", \"கடமை\",\n",
     "    \"சுத்தம்\", \"படை\", \"ஆதாரம்\", \"உணர்வு\", \"நாடுகள்\", \"சமூகம்\", \"ஆன்மிகம்\", \"கலாச்சாரம்\", \"தூது\", \"மொழி\",\n",
@@ -548,7 +548,7 @@
     "for keyword in keywords:\n",
     "    for submission in tqdm(subreddit.search(keyword, limit=limit_per_keyword)):\n",
     "        try:\n",
-    "            if submission.title.strip() == \"\" and submission.selftext.strip() == \"\" and len(submission.selftext.strip()) >= 5000:\n",
+    "            if submission.title.strip() == \"\" and submission.selftext.strip() == \"\":\n",
     "                continue  \n",
     "            \n",
     "            posts_data.append({\n",
