--- a/02_Data_Refinement.ipynb
+++ b/02_Data_Refinement.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "ad16a350",
-   "metadata": {},
-   "source": [
-    "## Translations to \"en\""
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "309ed8c0",
    "metadata": {},
    "outputs": [],
@@ -22,281 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f94270da",
+   "execution_count": null,
+   "id": "8a253c13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_translate = pd.read_csv(\"raw data\\srilanka_all_text.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "af1d7e97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "translator = GoogleTranslator(source=\"auto\", target=\"en\")\n",
-    "tqdm.pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7c689d6d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 42601/42601 [5:24:05<00:00,  2.19it/s]   \n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    # Translate title\n",
-    "    df_translate[\"post_title\"] = df_translate[\"post_title\"].progress_apply(\n",
-    "        lambda x: translator.translate(x) if isinstance(x, str) and x.strip() != \"\" and len(x) <= 5000 \n",
-    "        else x\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(\"Title Translation Error:\", e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1f2708da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def safe_translate(text):\n",
-    "    try:\n",
-    "        if isinstance(text, str) and text.strip() != \"\" and len(text) <= 5000:\n",
-    "            return translator.translate(text)\n",
-    "        else:\n",
-    "            return text\n",
-    "    except Exception as e:\n",
-    "        print(\"Row translation error:\", e)\n",
-    "        return text  # keep original instead of crashing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "0f3c89e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 27%|██▋       | 11685/42601 [1:23:12<4:36:46,  1.86it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▌      | 15022/42601 [1:48:47<3:04:44,  2.49it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 49%|████▊     | 20666/42601 [2:34:52<3:59:21,  1.53it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33663/42601 [4:17:56<1:00:00,  2.48it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33665/42601 [4:17:56<51:56,  2.87it/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33678/42601 [4:18:02<1:06:11,  2.25it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33687/42601 [4:18:07<1:11:15,  2.08it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33710/42601 [4:18:19<52:54,  2.80it/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33731/42601 [4:18:32<1:57:35,  1.26it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33732/42601 [4:18:32<1:45:55,  1.40it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33735/42601 [4:18:34<1:38:48,  1.50it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33755/42601 [4:18:40<49:20,  2.99it/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 79%|███████▉  | 33760/42601 [4:18:42<56:33,  2.61it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row translation error: Request exception can happen due to an api connection error. Please check your connection and try again\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 42601/42601 [5:24:40<00:00,  2.19it/s]  \n"
-     ]
-    }
-   ],
-   "source": [
-    "df_translate[\"body\"] = df_translate[\"body\"].progress_apply(safe_translate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "85d65638",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_translate.to_csv(\"raw data\\srilanka_all_text_translated.csv\", index=False, encoding=\"utf-8\")"
+    "df = pd.read_csv(\"raw data\\srilanka_all_text.csv\")\n",
+    "df.info()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d0e0013",
+   "id": "cf6688a0",
    "metadata": {},
    "source": [
     "## Remove Duplicates"
@@ -304,65 +33,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "3e168350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.duplicated(subset=[\"post_title\", \"body\"]).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8187c90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(subset=[\"post_title\", \"body\"], inplace=True)\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20232a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"raw data\\sl_all_text_drop_duplicates.csv\", index=False, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f94270da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_translate = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c9417f7",
+   "metadata": {},
+   "source": [
+    "## Translations to \"en\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f2708da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "translator = GoogleTranslator(source=\"auto\", target=\"en\")\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "def safe_translate(text):\n",
+    "    try:\n",
+    "        if isinstance(text, str) and text.strip() != \"\" and len(text) <= 5000:\n",
+    "            return translator.translate(text)\n",
+    "        else:\n",
+    "            return text\n",
+    "    except Exception as e:\n",
+    "        print(\"Translation error:\", e)\n",
+    "        return text  # keep original instead of crashing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20c2433c",
+   "metadata": {},
+   "source": [
+    "### Title Translation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2643ae72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_translate[\"post_title\"] = df_translate[\"post_title\"].progress_apply(safe_translate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3cb7fb5",
+   "metadata": {},
+   "source": [
+    "### Body Translation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f3c89e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_translate[\"body\"] = df_translate[\"body\"].progress_apply(safe_translate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85d65638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_translate.to_csv(\"raw data\\sl_all_text_translated.csv\", index=False, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d0e0013",
+   "metadata": {},
+   "source": [
+    "## Remove Duplicates (If exist after translation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "51ba9144",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(17311)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_translate.duplicated(subset=[\"post_title\", \"body\"]).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a438b98c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_translate.drop_duplicates(subset=[\"post_title\", \"body\"], inplace=True)\n",
-    "df_translate.reset_index(drop=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b4e3bbad",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 25290 entries, 0 to 25289\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   id           25290 non-null  object \n",
-      " 1   post_title   25289 non-null  object \n",
-      " 2   type         25290 non-null  object \n",
-      " 3   body         20950 non-null  object \n",
-      " 4   score        25290 non-null  int64  \n",
-      " 5   url          25290 non-null  object \n",
-      " 6   created_utc  25290 non-null  float64\n",
-      "dtypes: float64(1), int64(1), object(5)\n",
-      "memory usage: 1.4+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_translate.info()"
+    "# df_translate.drop_duplicates(subset=[\"post_title\", \"body\"], inplace=True)\n",
+    "# df_translate.reset_index(drop=True, inplace=True)\n",
+    "# df.info()"
    ]
   },
   {
@@ -375,19 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1d7d7732",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nisal\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.neighbors import NearestNeighbors\n",
@@ -406,22 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8821b519",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nisal\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\nisal\\.cache\\huggingface\\hub\\models--sentence-transformers--all-MiniLM-L6-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
-      "Batches: 100%|██████████| 791/791 [06:05<00:00,  2.16it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
     "embeddings = model.encode(df_translate[\"full_text\"].tolist(), batch_size=32, show_progress_bar=True)"
@@ -429,18 +221,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "979f63a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Highly similar posts found: 5354\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fit NN model\n",
     "nn = NearestNeighbors(n_neighbors=2, metric=\"cosine\").fit(embeddings)\n",
@@ -458,49 +242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e7449fde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean = df_translate.drop(index=to_remove).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "a5291c10",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 19936 entries, 0 to 19935\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   id           19936 non-null  object \n",
-      " 1   post_title   19935 non-null  object \n",
-      " 2   type         19936 non-null  object \n",
-      " 3   body         15818 non-null  object \n",
-      " 4   score        19936 non-null  int64  \n",
-      " 5   url          19936 non-null  object \n",
-      " 6   created_utc  19936 non-null  float64\n",
-      " 7   full_text    19936 non-null  object \n",
-      "dtypes: float64(1), int64(1), object(6)\n",
-      "memory usage: 1.2+ MB\n"
-     ]
-    }
-   ],
-   "source": [
+    "df_clean = df_translate.drop(index=to_remove).reset_index(drop=True)\n",
     "df_clean.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9e41aaa5",
    "metadata": {},
    "outputs": [],
