Collected another data

--- a/02_Data_Refinement.ipynb
+++ b/02_Data_Refinement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "309ed8c0",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a253c13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 57557 entries, 0 to 57556\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   id           57557 non-null  object \n",
+      " 1   post_title   57557 non-null  object \n",
+      " 2   type         57557 non-null  object \n",
+      " 3   body         49597 non-null  object \n",
+      " 4   score        57557 non-null  int64  \n",
+      " 5   url          57557 non-null  object \n",
+      " 6   created_utc  57557 non-null  float64\n",
+      "dtypes: float64(1), int64(1), object(5)\n",
+      "memory usage: 3.1+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"raw data\\srilanka_all_text.csv\")\n",
     "df.info()"
@@ -33,20 +54,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3e168350",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(24520)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.duplicated(subset=[\"post_title\", \"body\"]).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d8187c90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 33037 entries, 0 to 33036\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   id           33037 non-null  object \n",
+      " 1   post_title   33037 non-null  object \n",
+      " 2   type         33037 non-null  object \n",
+      " 3   body         28286 non-null  object \n",
+      " 4   score        33037 non-null  int64  \n",
+      " 5   url          33037 non-null  object \n",
+      " 6   created_utc  33037 non-null  float64\n",
+      "dtypes: float64(1), int64(1), object(5)\n",
+      "memory usage: 1.8+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "df.drop_duplicates(subset=[\"post_title\", \"body\"], inplace=True)\n",
     "df.reset_index(drop=True, inplace=True)\n",
@@ -154,6 +207,256 @@
    "metadata": {},
    "source": [
     "## Remove Highly Similar Posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5c1f2cb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating MinHashes and detecting similar posts...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33037/33037 [01:06<00:00, 493.19it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highly similar posts detected: 5981\n",
+      "Before: 33037, After: 27056, Removed: 5981\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>post_title</th>\n",
+       "      <th>type</th>\n",
+       "      <th>body</th>\n",
+       "      <th>score</th>\n",
+       "      <th>url</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1owpu40</td>\n",
+       "      <td>Feel so ashamed as a Sri Lankan😖</td>\n",
+       "      <td>text</td>\n",
+       "      <td>Felt so ashamed watching this. People on touri...</td>\n",
+       "      <td>385</td>\n",
+       "      <td>https://i.redd.it/r032jkou961g1.jpeg</td>\n",
+       "      <td>1.763104e+09</td>\n",
+       "      <td>Feel so ashamed as a Sri Lankan😖 Felt so asham...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1o39qaf</td>\n",
+       "      <td>What’s happening Sri lanka!</td>\n",
+       "      <td>text</td>\n",
+       "      <td>Why these people are allowed inside Sri lanka?...</td>\n",
+       "      <td>722</td>\n",
+       "      <td>https://v.redd.it/z2ph50al0cuf1</td>\n",
+       "      <td>1.760123e+09</td>\n",
+       "      <td>What’s happening Sri lanka! Why these people a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1nw4v0y</td>\n",
+       "      <td>This is insane, shows how many people in Sri L...</td>\n",
+       "      <td>text</td>\n",
+       "      <td>“Teachers and principals will resign from scho...</td>\n",
+       "      <td>470</td>\n",
+       "      <td>https://i.redd.it/mvnrxyglhpsf1.jpeg</td>\n",
+       "      <td>1.759414e+09</td>\n",
+       "      <td>This is insane, shows how many people in Sri L...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1nne3va</td>\n",
+       "      <td>What is something that happens in Sri Lanka bu...</td>\n",
+       "      <td>text</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>378</td>\n",
+       "      <td>https://i.redd.it/2vplg98pjnqf1.jpeg</td>\n",
+       "      <td>1.758519e+09</td>\n",
+       "      <td>What is something that happens in Sri Lanka bu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1o9rh3m</td>\n",
+       "      <td>Homophobia in Sri Lanka Is at an All Time High</td>\n",
+       "      <td>text</td>\n",
+       "      <td>Homophobia is crazy high in Sri Lanka these da...</td>\n",
+       "      <td>265</td>\n",
+       "      <td>https://www.reddit.com/gallery/1o9rh3m</td>\n",
+       "      <td>1.760780e+09</td>\n",
+       "      <td>Homophobia in Sri Lanka Is at an All Time High...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                         post_title  type  \\\n",
+       "0  1owpu40                   Feel so ashamed as a Sri Lankan😖  text   \n",
+       "1  1o39qaf                        What’s happening Sri lanka!  text   \n",
+       "2  1nw4v0y  This is insane, shows how many people in Sri L...  text   \n",
+       "3  1nne3va  What is something that happens in Sri Lanka bu...  text   \n",
+       "4  1o9rh3m     Homophobia in Sri Lanka Is at an All Time High  text   \n",
+       "\n",
+       "                                                body  score  \\\n",
+       "0  Felt so ashamed watching this. People on touri...    385   \n",
+       "1  Why these people are allowed inside Sri lanka?...    722   \n",
+       "2  “Teachers and principals will resign from scho...    470   \n",
+       "3                                                NaN    378   \n",
+       "4  Homophobia is crazy high in Sri Lanka these da...    265   \n",
+       "\n",
+       "                                      url   created_utc  \\\n",
+       "0    https://i.redd.it/r032jkou961g1.jpeg  1.763104e+09   \n",
+       "1         https://v.redd.it/z2ph50al0cuf1  1.760123e+09   \n",
+       "2    https://i.redd.it/mvnrxyglhpsf1.jpeg  1.759414e+09   \n",
+       "3    https://i.redd.it/2vplg98pjnqf1.jpeg  1.758519e+09   \n",
+       "4  https://www.reddit.com/gallery/1o9rh3m  1.760780e+09   \n",
+       "\n",
+       "                                                text  \n",
+       "0  Feel so ashamed as a Sri Lankan😖 Felt so asham...  \n",
+       "1  What’s happening Sri lanka! Why these people a...  \n",
+       "2  This is insane, shows how many people in Sri L...  \n",
+       "3  What is something that happens in Sri Lanka bu...  \n",
+       "4  Homophobia in Sri Lanka Is at an All Time High...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasketch import MinHash, MinHashLSH\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "import re\n",
+    "\n",
+    "# Combine title + body for similarity\n",
+    "df[\"text\"] = df[\"post_title\"].fillna(\"\") + \" \" + df[\"body\"].fillna(\"\")\n",
+    "\n",
+    "# Simple tokenizer\n",
+    "def tokenize(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r\"[^a-z0-9\\s]\", \" \", text)\n",
+    "    return text.split()\n",
+    "\n",
+    "# Create MinHash objects\n",
+    "def create_minhash(text, num_perm=128):\n",
+    "    tokens = tokenize(text)\n",
+    "    m = MinHash(num_perm=num_perm)\n",
+    "    for t in tokens:\n",
+    "        m.update(t.encode(\"utf8\"))\n",
+    "    return m\n",
+    "\n",
+    "# LSH for detecting near-duplicates\n",
+    "lsh = MinHashLSH(threshold=0.85, num_perm=128)   # adjust threshold if needed\n",
+    "\n",
+    "minhashes = {}\n",
+    "to_remove = set()\n",
+    "\n",
+    "print(\"Creating MinHashes and detecting similar posts...\")\n",
+    "\n",
+    "for idx in tqdm(df.index):\n",
+    "\n",
+    "    if idx in to_remove:\n",
+    "        continue\n",
+    "\n",
+    "    text = df.at[idx, \"text\"]\n",
+    "\n",
+    "    m = create_minhash(text)\n",
+    "    minhashes[idx] = m\n",
+    "\n",
+    "    # Query similar docs\n",
+    "    result = lsh.query(m)\n",
+    "\n",
+    "    if result:\n",
+    "        # Mark all later similar posts for removal\n",
+    "        for r in result:\n",
+    "            if r != idx:\n",
+    "                to_remove.add(r)\n",
+    "\n",
+    "    lsh.insert(idx, m)\n",
+    "\n",
+    "print(f\"Highly similar posts detected: {len(to_remove)}\")\n",
+    "\n",
+    "# Remove similar posts\n",
+    "df_simclean = df.drop(index=list(to_remove)).reset_index(drop=True)\n",
+    "\n",
+    "print(f\"Before: {df.shape[0]}, After: {df_simclean.shape[0]}, Removed: {df.shape[0] - df_simclean.shape[0]}\")\n",
+    "\n",
+    "# Save\n",
+    "df_simclean.to_csv(\"reddit_translated_simclean.csv\", index=False)\n",
+    "df_simclean.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cc2e18f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 27056 entries, 0 to 27055\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   id           27056 non-null  object \n",
+      " 1   post_title   27056 non-null  object \n",
+      " 2   type         27056 non-null  object \n",
+      " 3   body         22451 non-null  object \n",
+      " 4   score        27056 non-null  int64  \n",
+      " 5   url          27056 non-null  object \n",
+      " 6   created_utc  27056 non-null  float64\n",
+      " 7   text         27056 non-null  object \n",
+      "dtypes: float64(1), int64(1), object(6)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_simclean.info()"
    ]
   },
   {
